--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,32 @@
   </head>
 
   <body>
+
+    <nav style="background-color: #f1ee63;" class="p-4 shadow-md">
+      <div class="container mx-auto flex justify-between items-center">
+        <div class="text-gray-900 text-lg font-bold">
+          <a href="/" class="hover:text-gray-700">My App</a>
+        </div>
+        <select 
+          onchange="location = this.value;" 
+          class="language-switcher bg-white text-gray-900 py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2"
+        >
+          <option value="<%= url_for(locale: :en) %>" <%= 'selected' if I18n.locale == :en %>>English</option>
+          <option value="<%= url_for(locale: :es) %>" <%= 'selected' if I18n.locale == :es %>>Español</option>
+          <option value="<%= url_for(locale: :ja) %>" <%= 'selected' if I18n.locale == :ja %>>日本語</option>
+          <option value="<%= url_for(locale: :ru) %>" <%= 'selected' if I18n.locale == :ru %>>Русский</option>
+        </select>
+      </div>
+    </nav>
+
+
+
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
+
+    <div class="text-center p-6 bg-blue-500 text-white font-bold">
+      Tailwind CSS is working!
+    </div>
   </body>
 </html>
