--- a/app/views/formularies/_form.html.erb
+++ b/app/views/formularies/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: formulary, class: "contents") do |form| %>
   <% if formulary.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3">
-      <h2><%= pluralize(formulary.errors.count, "error") %> prohibited this formulary from being saved:</h2>
+      <h2><%= pluralize(formulary.errors.count, t('formularies.form.error')) %> <%= t('formularies.form.prohibited_message') %></h2>
 
       <ul>
         <% formulary.errors.each do |error| %>
@@ -12,16 +12,16 @@
   <% end %>  
 
   <div class="my-5">
-    <%= form.label :title %>
+    <%= form.label :title, t('formularies.form.fields.title') %>
     <%= form.text_field :title, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="my-5">
-    <%= form.label :description %>
+    <%= form.label :description, t('formularies.form.fields.description') %>
     <%= form.text_area :description, rows: 4, class: "block shadow rounded-md border border-gray-400 outline-none px-3 py-2 mt-2 w-full" %>
   </div>
 
   <div class="inline">
-    <%= form.submit class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
+    <%= form.submit t('formularies.form.submit_button'), class: "rounded-lg py-3 px-5 bg-blue-600 text-white inline-block font-medium cursor-pointer" %>
   </div>
 <% end %>
