--- a/app/views/formularies/show.html.erb
+++ b/app/views/formularies/show.html.erb
@@ -8,7 +8,7 @@
 
     <% if @formulary.attachment.attached? %>
       <p><%= t('formularies.show.uploaded_file') %>:</p>
-      <%= image_tag @formulary.attachment.variant(resize_to_limit: [500, 500]) %>
+      <%= image_tag @formulary.attachment %>
     <% else %>
       <p><%= t('formularies.show.no_file_uploaded') %></p>
     <% end %>
